Corrects the overflow of the tips box

--- a/client/app/styles/buildingDisplay.scss
+++ b/client/app/styles/buildingDisplay.scss
@@ -1,7 +1,7 @@
 #toggles {
   max-width: 10%;
-  margin-top: 2%;
-  margin-left: 2%;
+  padding-top:10%;
+  margin-left: 5%;
   padding-bottom: 1%;
   max-height: 20%;
   display: inline;
@@ -10,6 +10,10 @@
     cursor: pointer;
     opacity: 0.7;
     filter: alpha(opacity=70);
+  }
+
+  img {
+    margin-top: 20%;
   }
 }
 
